@@ -3,6 +3,8 @@ Revision history for Perl extension WebService::Solr.
 0.08  XXX
     - Allow scalar ref value in WebService::Solr::Query, which works like
       SQL::Abstract (literal query)
+    - Fix status_message and status_code in Response
+    - Add Data::Pageset capabilities to Response (Jos Boumans)
 
 0.07  Fri Jun 26 2009
     - Trap JSON::XS exceptions (Jos Boumans)
